# OpenGLGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  cube_points.txt  genRawData.py  main.cpp  tex.fs  tex.vs  todo.md
ExternalLibraries/stbImage/: stbImage.cpp
GLAD/src/: glad.c
Libraries/camera/: camera.cpp
Libraries/cameraUtil/: cameraUtil.cpp
Libraries/init/: core.cpp  init.cpp
Libraries/initCloseScript/: close.cpp  core.cpp  init.cpp
Libraries/initScript/: core.cpp
Libraries/shader/: shader.cpp
Libraries/shaderUtil/: shader.cpp
Libraries/singleWindowLibrary/: core.cpp  glad.c  (+1 more)
OpenGLGameEngine/: .gitignore  CMakeLists.txt  README.md
OpenGLGameEngine/Debug/: OpenGLGameEngine.exe.recipe  OpenGLGameEngine.vcxproj.FileListAbsolute.txt  vc142.idb
OpenGLGameEngine/Debug/OpenGLGameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGLGameEngine.lastbuildstate
OpenGLGameEngine/ExternalLibraries/: CMakeLists.txt
OpenGLGameEngine/ExternalLibraries/glad/: CMakeLists.txt
OpenGLGameEngine/ExternalLibraries/glad/include/glad/: gl.h
OpenGLGameEngine/ExternalLibraries/rapidjson/: CMakeLists.txt
OpenGLGameEngine/ExternalLibraries/stbImage/Headers/: stbImage.h
OpenGLGameEngine/Libraries/: CMakeLists.txt
OpenGLGameEngine/Libraries/Camera/: CMakeLists.txt  camera.cpp
OpenGLGameEngine/Libraries/Camera/Headers/: camera.hpp
OpenGLGameEngine/Libraries/GLTF/: GLTFParser.cpp
OpenGLGameEngine/Libraries/GLTF/Headers/: GLTFParser.hpp
OpenGLGameEngine/Libraries/GLTFParser/: CMakeLists.txt  GLTFParser.cpp
OpenGLGameEngine/Libraries/GLTFParser/Headers/: GLTFParser.hpp
OpenGLGameEngine/Libraries/Input/: CMakeLists.txt
OpenGLGameEngine/Libraries/Input/Headers/: input.hpp
OpenGLGameEngine/Libraries/Mesh/: CMakeLists.txt  Mesh.cpp  mesh.cpp
OpenGLGameEngine/Libraries/Mesh/Headers/: Mesh.hpp  mesh.hpp
OpenGLGameEngine/Libraries/Shader/: CMakeLists.txt  shader.cpp
OpenGLGameEngine/Libraries/Shader/Headers/: shader.hpp
OpenGLGameEngine/Libraries/Texture/: CMakeLists.txt  Texture.cpp  texture.cpp
OpenGLGameEngine/Libraries/Texture/Headers/: Texture.hpp  texture.hpp
OpenGLGameEngine/Libraries/VertexAttributeArray/: CMakeLists.txt  vertexAttributeArray.cpp
OpenGLGameEngine/Libraries/VertexAttributeArray/Header/: vertexAttributeArray.hpp
OpenGLGameEngine/Libraries/VertexAttributeArray/Headers/: vertexAttributeArray.hpp
OpenGLGameEngine/Libraries/Window/: CMakeLists.txt
OpenGLGameEngine/Libraries/Window/Headers/: window.hpp
OpenGLGameEngine/Libraries/input/: input.cpp
OpenGLGameEngine/Libraries/input/ExternalLibraries/glfw/: cmake_uninstall.cmake
OpenGLGameEngine/Libraries/input/ExternalLibraries/glfw/src/: glfw3.pc
OpenGLGameEngine/Libraries/input/Headers/: input.hpp
OpenGLGameEngine/Libraries/window/: window.cpp
OpenGLGameEngine/Libraries/window/Headers/: window.hpp
OpenGLGameEngine/Resources/Shaders/: lightObject.frag  lighting.frag  lighting.vert  triangle.frag  triangle.vert
OpenGLGameEngine/Sources/: CMakeLists.txt  main.cpp
Sources/: main.cpp
dependencies/: CMakeLists.txt
helper_scripts/: genRawData.py  genRawImageData.py
src/: main.rs
(+45 files in other folders)
